Fix fake torrent not getting built into the jar